--- a/types/RouterInstance.html
+++ b/types/RouterInstance.html
@@ -55,7 +55,7 @@
 <h5><span class="tsd-kind-parameter">promise</span>: <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">T</span><span class="tsd-signature-symbol">&gt;</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">T</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/331279c/src/types.ts#L52">types.ts:52</a></li></ul></aside></li></ul></li>
+<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/81ad6bb/src/types.ts#L53">types.ts:53</a></li></ul></aside></li></ul></li>
 <li class="tsd-parameter">
 <h5><span class="tsd-kind-method">cancel<wbr/>All</span><span class="tsd-signature-symbol">:</span>function</h5>
 <ul class="tsd-signatures">
@@ -63,11 +63,11 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/331279c/src/types.ts#L53">types.ts:53</a></li></ul></aside></li></ul></li>
+<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/81ad6bb/src/types.ts#L54">types.ts:54</a></li></ul></aside></li></ul></li>
 <li class="tsd-parameter">
 <h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">resolving</span><span class="tsd-signature-symbol">?: </span><a href="Location.html" class="tsd-signature-type tsd-kind-type-alias">Location</a></h5></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/331279c/src/types.ts#L45">types.ts:45</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/81ad6bb/src/types.ts#L46">types.ts:46</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -90,20 +90,21 @@
 <li><a href="../functions/PrefetchLink.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>Prefetch<wbr/>Link</span></a></li>
 <li><a href="../functions/usePrefetch.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Prefetch</span></a></li>
 <li><a href="../functions/useView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>View</span></a></li>
-<li><a href="../functions/InitializableView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>Initializable<wbr/>View</span></a></li>
 <li><a href="../functions/View.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>View</span></a></li>
 <li><a href="../functions/useData.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Data</span></a></li>
 <li><a href="../functions/useLoading.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Loading</span></a></li>
 <li><a href="../functions/useMatched.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Matched</span></a></li>
 <li><a href="../functions/defaultResolveView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>default<wbr/>Resolve<wbr/>View</span></a></li>
 <li><a href="../functions/resolveClientView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>resolve<wbr/>Client<wbr/>View</span></a></li>
-<li><a href="../functions/createRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>create<wbr/>Router</span></a></li>
 <li><a href="../functions/Router.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>Router</span></a></li>
+<li><a href="../functions/createRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>create<wbr/>Router</span></a></li>
 <li><a href="../functions/HistoryRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>History<wbr/>Router</span></a></li>
 <li><a href="../functions/HashRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>Hash<wbr/>Router</span></a></li>
 <li><a href="../functions/MemoryRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>Memory<wbr/>Router</span></a></li>
 <li><a href="../functions/useRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Router</span></a></li>
 <li><a href="../functions/create.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>create</span></a></li>
+<li><a href="../functions/getHistoryState.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>History<wbr/>State</span></a></li>
+<li><a href="../functions/getCurrentView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Current<wbr/>View</span></a></li>
 <li><a href="../functions/match.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>match</span></a></li>
 <li><a href="../functions/toLocation.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>to<wbr/>Location</span></a></li>
 <li><a href="../functions/resolve.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>resolve</span></a></li>
@@ -117,6 +118,7 @@
 <li><a href="../functions/back.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>back</span></a></li>
 <li><a href="../functions/createHref.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>create<wbr/>Href</span></a></li>
 <li><a href="../functions/cancel.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>cancel</span></a></li>
+<li><a href="../functions/initHistoryStack.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>init<wbr/>History<wbr/>Stack</span></a></li>
 <li><a href="../functions/listen.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>listen</span></a></li>
 <li><a href="Location.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-4194304"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-type-alias)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)"></path></g></svg><span>Location</span></a></li>
 <li><a href="HistoryState.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>History<wbr/>State</span></a></li>
