--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 <li><a href="functions/MemoryRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>Memory<wbr/>Router</span></a></li>
 <li><a href="functions/useRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Router</span></a></li>
 <li><a href="functions/create.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>create</span></a></li>
+<li><a href="functions/setOptions.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>set<wbr/>Options</span></a></li>
 <li><a href="functions/getHistoryState.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>History<wbr/>State</span></a></li>
 <li><a href="functions/getCurrentView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Current<wbr/>View</span></a></li>
 <li><a href="functions/match.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>match</span></a></li>
