--- a/functions/View.html
+++ b/functions/View.html
@@ -25,7 +25,7 @@ It just render the return of <a href="useView.html" class="tsd-kind-function">us
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">ReactNode</span></h4>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/dedaf8a/src/context.tsx#L28">context.tsx:28</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/adfdd6c/src/context.tsx#L23">context.tsx:23</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -61,6 +61,7 @@ It just render the return of <a href="useView.html" class="tsd-kind-function">us
 <li><a href="MemoryRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>Memory<wbr/>Router</span></a></li>
 <li><a href="useRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Router</span></a></li>
 <li><a href="create.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>create</span></a></li>
+<li><a href="setOptions.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>set<wbr/>Options</span></a></li>
 <li><a href="getHistoryState.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>History<wbr/>State</span></a></li>
 <li><a href="getCurrentView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Current<wbr/>View</span></a></li>
 <li><a href="match.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>match</span></a></li>
