--- a/types/ResolveView.html
+++ b/types/ResolveView.html
@@ -39,7 +39,7 @@
 <h5><span class="tsd-kind-parameter">ctx</span>: <a href="ResolveViewContext.html" class="tsd-signature-type tsd-kind-type-alias">ResolveViewContext</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">R</span><span class="tsd-signature-symbol">&gt;</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">V</span><span class="tsd-signature-symbol">&gt;</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/dedaf8a/src/types.ts#L31">types.ts:31</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/adfdd6c/src/types.ts#L31">types.ts:31</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -75,6 +75,7 @@
 <li><a href="../functions/MemoryRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>Memory<wbr/>Router</span></a></li>
 <li><a href="../functions/useRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Router</span></a></li>
 <li><a href="../functions/create.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>create</span></a></li>
+<li><a href="../functions/setOptions.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>set<wbr/>Options</span></a></li>
 <li><a href="../functions/getHistoryState.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>History<wbr/>State</span></a></li>
 <li><a href="../functions/getCurrentView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Current<wbr/>View</span></a></li>
 <li><a href="../functions/match.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>match</span></a></li>
