--- a/functions/View.html
+++ b/functions/View.html
@@ -3,7 +3,7 @@
 <div class="table-cell" id="tsd-search" data-base="..">
 <div class="field"><label for="tsd-search-field" class="tsd-widget tsd-toolbar-icon search no-caption"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"><use href="#icon-search"></use></svg></label><input type="text" id="tsd-search-field" aria-label="Search"/></div>
 <div class="field">
-<div id="tsd-toolbar-links"><a href="/@native-router/react/demos/">Demos</a></div></div>
+<div id="tsd-toolbar-links"><a href="/react/demos/">Demos</a></div></div>
 <ul class="results">
 <li class="state loading">Preparing search index...</li>
 <li class="state failure">The search index is not available</li></ul><a href="../index.html" class="title">@native-router/react</a></div>
@@ -25,7 +25,7 @@ It just render the return of <a href="useView.html" class="tsd-kind-function">us
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">ReactNode</span></h4>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/native-router/react/blob/876a6a1/src/context.tsx#L23">context.tsx:23</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/native-router/react/blob/7c91afa/src/context.tsx#L23">context.tsx:23</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
