--- a/functions/createRouter.html
+++ b/functions/createRouter.html
@@ -3,7 +3,7 @@
 <div class="table-cell" id="tsd-search" data-base="..">
 <div class="field"><label for="tsd-search-field" class="tsd-widget tsd-toolbar-icon search no-caption"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"><use href="#icon-search"></use></svg></label><input type="text" id="tsd-search-field" aria-label="Search"/></div>
 <div class="field">
-<div id="tsd-toolbar-links"><a href="/@native-router/react/demos/">Demos</a></div></div>
+<div id="tsd-toolbar-links"><a href="/react/demos/">Demos</a></div></div>
 <ul class="results">
 <li class="state loading">Preparing search index...</li>
 <li class="state failure">The search index is not available</li></ul><a href="../index.html" class="title">@native-router/react</a></div>
@@ -30,7 +30,7 @@
 <h5><span class="tsd-kind-parameter">__namedParameters</span>: <span class="tsd-signature-type ">Options</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type ">ReactNode</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> &amp; </span><span class="tsd-signature-symbol">{ </span><br/><span>    </span><span class="tsd-kind-property">resolveView</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type ">ResolveView</span><span class="tsd-signature-symbol">&lt;</span><a href="../types/Route.html" class="tsd-signature-type tsd-kind-type-alias">Route</a><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type ">ReactNode</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">; </span><br/><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol"> = {}</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">RouterInstance</span><span class="tsd-signature-symbol">&lt;</span><a href="../types/Route.html" class="tsd-signature-type tsd-kind-type-alias">Route</a><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type ">ReactNode</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/native-router/react/blob/876a6a1/src/components/Router.tsx#L65">components/Router.tsx:65</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/native-router/react/blob/7c91afa/src/components/Router.tsx#L58">components/Router.tsx:58</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
