--- a/functions/useRouter.html
+++ b/functions/useRouter.html
@@ -3,7 +3,7 @@
 <div class="table-cell" id="tsd-search" data-base="..">
 <div class="field"><label for="tsd-search-field" class="tsd-widget tsd-toolbar-icon search no-caption"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"><use href="#icon-search"></use></svg></label><input type="text" id="tsd-search-field" aria-label="Search"/></div>
 <div class="field">
-<div id="tsd-toolbar-links"><a href="/@native-router/react/demos/">Demos</a></div></div>
+<div id="tsd-toolbar-links"><a href="/react/demos/">Demos</a></div></div>
 <ul class="results">
 <li class="state loading">Preparing search index...</li>
 <li class="state failure">The search index is not available</li></ul><a href="../index.html" class="title">@native-router/react</a></div>
@@ -25,7 +25,7 @@
 
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/native-router/react/blob/876a6a1/src/components/Router.tsx#L139">components/Router.tsx:139</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/native-router/react/blob/7c91afa/src/components/Router.tsx#L132">components/Router.tsx:132</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
