--- a/types/ResolveViewContext.html
+++ b/types/ResolveViewContext.html
@@ -3,7 +3,7 @@
 <div class="table-cell" id="tsd-search" data-base="..">
 <div class="field"><label for="tsd-search-field" class="tsd-widget tsd-toolbar-icon search no-caption"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"><use href="#icon-search"></use></svg></label><input type="text" id="tsd-search-field" aria-label="Search"/></div>
 <div class="field">
-<div id="tsd-toolbar-links"><a href="/@native-router/react/demos/">Demos</a></div></div>
+<div id="tsd-toolbar-links"><a href="/react/demos/">Demos</a></div></div>
 <ul class="results">
 <li class="state loading">Preparing search index...</li>
 <li class="state failure">The search index is not available</li></ul><a href="../index.html" class="title">@native-router/react</a></div>
@@ -29,7 +29,7 @@
 <li class="tsd-parameter">
 <h5><span class="tsd-kind-property">location</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">Location</span></h5></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/native-router/react/blob/876a6a1/src/types.ts#L9">types.ts:9</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/native-router/react/blob/7c91afa/src/types.ts#L14">types.ts:14</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
